--- a/Sistema OS - Assistência Técnica/Sistema OS - Assistência Técnica.csproj
+++ b/Sistema OS - Assistência Técnica/Sistema OS - Assistência Técnica.csproj
@@ -37,6 +37,9 @@
     <Reference Include="Bunifu.UI.WinForms.BunifuButton">
       <HintPath>..\..\SISTEMA MARMORIA BELLAS PEDRAS\Bunifu UI WinForms v4.1.1\Bunifu.UI.WinForms.BunifuButton.dll</HintPath>
     </Reference>
+    <Reference Include="Bunifu.UI.WinForms.BunifuCheckBox">
+      <HintPath>..\..\SISTEMA MARMORIA BELLAS PEDRAS\Bunifu UI WinForms v4.1.1\Bunifu.UI.WinForms.BunifuCheckBox.dll</HintPath>
+    </Reference>
     <Reference Include="Bunifu.UI.WinForms.BunifuDataGridView">
       <HintPath>..\..\SISTEMA MARMORIA BELLAS PEDRAS\Bunifu UI WinForms v4.1.1\Bunifu.UI.WinForms.BunifuDataGridView.dll</HintPath>
     </Reference>
@@ -84,6 +87,7 @@
     <Compile Include="1 - BancoGlobal\BancoGlobal.cs" />
     <Compile Include="2 - Classes\CadastroClienteEstrutura.cs" />
     <Compile Include="2 - Classes\CadastroServicoEstrutura.cs" />
+    <Compile Include="2 - Classes\GarantiaEstrutura.cs" />
     <Compile Include="2 - Classes\ValidarDigitos.cs" />
     <Compile Include="3 - Forms\form_CadastrarClientes.cs">
       <SubType>Form</SubType>
@@ -97,17 +101,41 @@
     <Compile Include="3 - Forms\form_CadastrarServicos.Designer.cs">
       <DependentUpon>form_CadastrarServicos.cs</DependentUpon>
     </Compile>
+    <Compile Include="3 - Forms\form_CalcularDataGarantia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="3 - Forms\form_CalcularDataGarantia.Designer.cs">
+      <DependentUpon>form_CalcularDataGarantia.cs</DependentUpon>
+    </Compile>
     <Compile Include="3 - Forms\form_EditarServicos.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="3 - Forms\form_EditarServicos.Designer.cs">
       <DependentUpon>form_EditarServicos.cs</DependentUpon>
     </Compile>
+    <Compile Include="3 - Forms\form_EditarCadastrosClientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="3 - Forms\form_EditarCadastrosClientes.Designer.cs">
+      <DependentUpon>form_EditarCadastrosClientes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="3 - Forms\form_GarantiaServicoConcluido.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="3 - Forms\form_GarantiaServicoConcluido.Designer.cs">
+      <DependentUpon>form_GarantiaServicoConcluido.cs</DependentUpon>
+    </Compile>
     <Compile Include="3 - Forms\form_Principal.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="3 - Forms\form_Principal.Designer.cs">
       <DependentUpon>form_Principal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="3 - Forms\form_ServicosConcluidos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="3 - Forms\form_ServicosConcluidos.Designer.cs">
+      <DependentUpon>form_ServicosConcluidos.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -117,11 +145,23 @@
     <EmbeddedResource Include="3 - Forms\form_CadastrarServicos.resx">
       <DependentUpon>form_CadastrarServicos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="3 - Forms\form_CalcularDataGarantia.resx">
+      <DependentUpon>form_CalcularDataGarantia.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="3 - Forms\form_EditarServicos.resx">
       <DependentUpon>form_EditarServicos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="3 - Forms\form_EditarCadastrosClientes.resx">
+      <DependentUpon>form_EditarCadastrosClientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="3 - Forms\form_GarantiaServicoConcluido.resx">
+      <DependentUpon>form_GarantiaServicoConcluido.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="3 - Forms\form_Principal.resx">
       <DependentUpon>form_Principal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="3 - Forms\form_ServicosConcluidos.resx">
+      <DependentUpon>form_ServicosConcluidos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -185,6 +225,36 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icons8-vassoura-100.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-gestão-de-cliente-100.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-e-mail-para-celular-100.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-telefone-celular-100.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-card-100.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-adicionar-usuário-masculino-100.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-usb-100.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-editar-100.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-garantia-100.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-ok-100.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-selecionado-100.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
